--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/338146488a.js" crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="css\lightslider.css">
     <script type="text/javascript" src="js\JQuery3.3.1.js"></script>
     <script type="text/javascript" src="js\lightslider.js"></script>
-    <title>Flimix</title>
+    <title>Calibriya</title>
 </head>
 <body>
      <!--                                            Navbar                                                    -->
@@ -791,7 +793,80 @@
     </div>
 </div>
 
-   
+   <div class="wrapper">
+       <h1 class="wrapper-h1">Testimonial</h1>
+       <div class="testimonial">
+           <div class="row-r">
+            <div class="item">
+                <div class="img">
+                    <img src="images\subhadra-2.png" alt="">
+                </div>
+                <div class="name">
+                     Subhadra
+                </div>
+                <div class="content">
+                    <h1><i class="fas fa-quote-left"></i></h1>
+                    <p>Backend developer</p>
+                </div>
+            </div>
+ 
+            <div class="item">
+             <div class="img">
+                 <img src="images\Bhumika Sethi.png" alt="">
+             </div>
+             <div class="name">
+                  Bhumika
+             </div>
+             <div class="content">
+                 <h1><i class="fas fa-quote-left"></i></h1>
+                 <p>Frontend Developer</p>
+             </div>
+         </div>
+ 
+         <div class="item">
+             <div class="img">
+                 <img src="images\akshat.png" alt="">
+             </div>
+             <div class="name">
+                  Alisha
+             </div>
+             <div class="content">
+                 <h1><i class="fas fa-quote-left"></i></h1>
+                 <p>Backend Developer</p>
+             </div>
+         </div>
+           </div>
+           <div class="row-r">
+            <div class="item">
+                <div class="img">
+                    <img src="images\shivansh.png" alt="">
+                </div>
+                <div class="name">
+                     Shivansh
+                </div>
+                <div class="content">
+                    <h1><i class="fas fa-quote-left"></i></h1>
+                    <p>Frontend Developer</p>
+                </div>
+             </div>
+ 
+           
+ 
+            <div class="item">
+             <div class="img">
+                 <img src="images\akshat.png" alt="">
+             </div>
+             <div class="name">
+                  AKshat
+             </div>
+             <div class="content">
+                 <h1><i class="fas fa-quote-left"></i></h1>
+                 <p>Backend Developer</p>
+             </div>
+            </div>
+           </div>
+       </div>
+   </div>
 
     <footer class="footer" id="about">
         <p>Questions? Call 000-800-040-1843</p>
