login/signup page added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a href="#anime">Physics</a></li>
                     <li><a href= "#movies">Maths</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="index-2.html" class="btn rounded-btn">Sign-up</a></li>
+                    <li><a href="login.html" class="btn rounded-btn">Sign-up</a></li>
                 </ul>
                 <!-- Mobile-Mode -->
                 <div class="ham-menu" id="ham-menu">
