Login issue fixed

--- a/index-1.html
+++ b/index-1.html
@@ -31,7 +31,7 @@
                     <li><a href="#about">About Us</a></li>
                     <li><a href="index2.php">Contact Us</a></li>
                     <li><a href="Calibriya_Personal - Copy\Untitled-2.html">Event</a></li>
-                    <li><a href="login.html" class="btn rounded-btn">Login</a></li>
+                    <li><a href="login.html" class="btn rounded-btn">Alisha</a></li>
                 </ul>
                 <!-- Mobile-Mode -->
                 <div class="ham-menu" id="ham-menu">
@@ -783,80 +783,80 @@
     </div>
 </div>
 
-<div class="wrapper"  id="about">
-    <h1 class="wrapper-h1">Testimonial</h1>
-    <div class="testimonial">
-        <div class="row-r">
-         <div class="item">
+   <div class="wrapper"  id="about">
+       <h1 class="wrapper-h1">Testimonial</h1>
+       <div class="testimonial">
+           <div class="row-r">
+            <div class="item">
+                <div class="img">
+                    <img src="images\subhadra-2.png" alt="">
+                </div>
+                <div class="name">
+                     Subhadra
+                </div>
+                <div class="content">
+                    <h1><i class="fas fa-quote-left"></i></h1>
+                    <p><b>Backend developer</b><br>I am an aspiring coder also learning web designing and web development. Right now i know basics of front-end and backend and also I'm a very quick learner.</p>
+                </div>
+            </div>
+ 
+            <div class="item">
              <div class="img">
-                 <img src="images\subhadra-2.png" alt="">
+                 <img src="images\Bhumika Sethi.png" alt="">
              </div>
              <div class="name">
-                  Subhadra
+                  Bhumika
              </div>
              <div class="content">
                  <h1><i class="fas fa-quote-left"></i></h1>
-                 <p><b>Backend developer</b><br>I am an aspiring coder also learning web designing and web development. Right now i know basics of front-end and backend and also I'm a very quick learner.</p>
+                 <p><b>Frontend Developer</b><br>I am a web dev enthusiast, who loves to explore and work with different languages and technologies.</p>
              </div>
          </div>
-
-         <div class="item">
-          <div class="img">
-              <img src="images\Bhumika Sethi.png" alt="">
-          </div>
-          <div class="name">
-               Bhumika
-          </div>
-          <div class="content">
-              <h1><i class="fas fa-quote-left"></i></h1>
-              <p><b>Frontend Developer</b><br>I am a web dev enthusiast, who loves to explore and work with different languages and technologies.</p>
-          </div>
-      </div>
-
-      <div class="item">
-          <div class="img">
-              <img src="images\Alisha.png" alt="">
-          </div>
-          <div class="name">
-               Alisha
-          </div>
-          <div class="content">
-              <h1><i class="fas fa-quote-left"></i></h1>
-              <p><b>Backend Developer</b><br>I am an aspiring coder also learning web designing and web development. Right now i know basics of front-end and backend and also I'm a very quick learner.</p>
-          </div>
-      </div>
-        </div>
-        <div class="row-r">
+ 
          <div class="item">
              <div class="img">
-                 <img src="images\shivansh.png" alt="">
+                 <img src="images\Alisha.png" alt="">
              </div>
              <div class="name">
-                  Shivansh
+                  Alisha
              </div>
              <div class="content">
                  <h1><i class="fas fa-quote-left"></i></h1>
-                 <p><b>Frontend Developer</b><br>Hi, I am a frontend developer who loves to explore new things and reach new horizons.</p>
+                 <p><b>Backend Developer</b><br>I am an aspiring coder also learning web designing and web development. Right now i know basics of front-end and backend and also I'm a very quick learner.</p>
              </div>
-          </div>
-
-        
-
-         <div class="item">
-          <div class="img">
-              <img src="images\Akshat-Sharma.png" alt="">
-          </div>
-          <div class="name">
-               Akshat
-          </div>
-          <div class="content">
-              <h1><i class="fas fa-quote-left"></i></h1>
-              <p><b>Frontend Developer</b><br>I am a front end developer who love to explore new things in life with knowledge of HTML,CSS and Bootstrap and JS</p>
-          </div>
          </div>
-        </div>
-    </div>
-</div>
+           </div>
+           <div class="row-r">
+            <div class="item">
+                <div class="img">
+                    <img src="images\shivansh.png" alt="">
+                </div>
+                <div class="name">
+                     Shivansh
+                </div>
+                <div class="content">
+                    <h1><i class="fas fa-quote-left"></i></h1>
+                    <p><b>Frontend Developer</b><br>Hi, I am a frontend developer who loves to explore new things and reach new horizons.</p>
+                </div>
+             </div>
+ 
+           
+ 
+            <div class="item">
+             <div class="img">
+                 <img src="images\Akshat-Sharma.png" alt="">
+             </div>
+             <div class="name">
+                  Akshat
+             </div>
+             <div class="content">
+                 <h1><i class="fas fa-quote-left"></i></h1>
+                 <p><b>Frontend Developer</b><br>I am a front end developer who love to explore new things in life with knowledge of HTML,CSS and Bootstrap and JS</p>
+             </div>
+            </div>
+           </div>
+       </div>
+   </div>
 
     <footer class="footer">
         <p>Questions? Call 000-800-040-1843</p>
