issue removed in login tab

--- a/index-1.html
+++ b/index-1.html
@@ -31,7 +31,7 @@
                     <li><a href="#about">About Us</a></li>
                     <li><a href="index2.php">Contact Us</a></li>
                     <li><a href="Calibriya_Personal - Copy\Untitled-2.html">Event</a></li>
-                    <li><a href="login.html" class="btn rounded-btn">Alisha</a></li>
+                    <li><a href="login.html" class="btn rounded-btn">Login</a></li>
                 </ul>
                 <!-- Mobile-Mode -->
                 <div class="ham-menu" id="ham-menu">
