contact us page added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a href="#anime">Physics</a></li>
                     <li><a href= "#web">Maths</a></li>
                     <li><a href="#about">About Us</a></li>
-                    <li><a href="index2.php">Contact Us</a></li>
+                    <li><a href="index2.html">Contact Us</a></li>
                     <li><a href="Calibriya_Personal - Copy\Untitled-2.html">Event</a></li>
                     <li><a href="login.html" class="btn rounded-btn">Login</a></li>
                 </ul>
