--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
                     <i class="fab fa-facebook-f color fa-sm"></i>
                     <i class="fab fa-twitter color fa-sm"></i>
                 </div>
-                <button type="submit" class="submit-btn"><a href="index-1.html"> Login</a></button>
+                <button type="submit" class="submit-btn"><a href="index.html"> Login</a></button>
             </div>
 
             <div id="Signup" class="input-section">
@@ -44,7 +44,7 @@
                     <i class="fab fa-facebook-f color fa-sm"></i>
                     <i class="fab fa-twitter color fa-sm"></i>
                 </div>
-                <button type="submit" class="submit-btn"><a href="index-1.html"> Sign Up</a></button>
+                <button type="submit" class="submit-btn"><a href="index.html"> Sign Up</a></button>
             </div>
 
         </div>
